adjusted intro font size to avoid widow. changed paragraph text to font family georgia for better readability.

--- a/css/demo.css
+++ b/css/demo.css
@@ -36,7 +36,8 @@ h3 {
 
 p {
 	color: #aea18f;
-	font-size: 1em;
+	font-family: Georgia, serif;
+	font-size: 0.8em;
 	font-weight: 300;
 	padding: 0 0 30px 0;
 }
@@ -72,6 +73,11 @@ a:hover, a:active {
 
 #popular, #modes, #clutter, #colorful, #default, #supported {
 	padding: 0 0 70px 0;
+}
+
+#supported {
+	font-family: georgia, serif;
+	font-size: 0.8em;
 }
 
 #popular .devices {
